--- a/index.html
+++ b/index.html
@@ -1,69 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
 
-    <title>Async Promises Lab </title>
-    <meta name="description" content="Async Promises Lab in the Learn.co curriculum">
-    <meta name="author" content="Flatiron School">
+<head>
+  <meta charset="utf-8">
 
-    <link rel="stylesheet" href="node_modules/mocha/mocha.css">
-    <link rel="stylesheet" href="vendor/css/materialize.css">
-    <link rel="stylesheet" href="vendor/js/materialize.js">
+  <title>Async Promises Lab </title>
+  <meta name="description" content="Async Promises Lab in the Learn.co curriculum">
+  <meta name="author" content="Flatiron School">
 
-  </head>
+  <link rel="stylesheet" href="node_modules/mocha/mocha.css">
+  <link rel="stylesheet" href="vendor/css/materialize.css">
+  <link rel="stylesheet" href="vendor/js/materialize.js">
 
-  <body>
-    <div class="section">
-    </div>
-    <div class="section">
-    </div>
-    <div class="section">
-    </div>
-    <div class="container">
-      <div class="card-panel hoverable">
-        <div class="section">
-          <h5 class="center-align blue-text text-darken-2">Cash Scuber</h5>
-        </div>
-        <div class="section question-container center-align">
-        </div>
-        <div class="section center-align true-false-list">
-          <div class="btn center-align hide  green lighten-2"> True </div>
-          <div class="btn center-align hide red lighten-2"> False </div>
-        </div>
-        <div class="section">
-          <div class="center-align">
-            <a class="waves-effect waves-light btn">Ask Away!</a>
-          </div>
-        </div>
+</head>
 
-
+<body>
+  <div class="section">
+  </div>
+  <div class="section">
+  </div>
+  <div class="section">
+  </div>
+  <div class="container">
+    <div class="card-panel hoverable">
+      <div class="section">
+        <h5 class="center-align blue-text text-darken-2">Cash Scuber</h5>
       </div>
+      <div class="section question-container center-align">
+      </div>
+      <div class="section center-align true-false-list">
+        <div class="btn center-align hide  green lighten-2">TRUE</div>
+        <div class="btn center-align hide red lighten-2">FALSE</div>
+      </div>
+      <div class="section">
+        <div class="center-align">
+          <a class="waves-effect waves-light btn">Ask Away!</a>
+        </div>
+      </div>
+
+
     </div>
-    <div class="question-container">
-    </div>
-    <!-- <div> for Mocha to display test results. -->
-    <div id="mocha"></div>
+  </div>
+  <div class="question-container">
+  </div>
+  <!-- <div> for Mocha to display test results. -->
+  <div id="mocha"></div>
 
-    <!-- Include Mocha and set it up for BDD-style testing. -->
-    <script src="node_modules/mocha/mocha.js"></script>
-    <script>mocha.setup('bdd');</script>
+  <!-- Include Mocha and set it up for BDD-style testing. -->
+  <script src="node_modules/mocha/mocha.js"></script>
+  <script>
+    mocha.setup('bdd');
 
-    <!-- Include Chai as the matcher library. -->
-    <script src="node_modules/chai/chai.js"></script>
+  </script>
+
+  <!-- Include Chai as the matcher library. -->
+  <script src="node_modules/chai/chai.js"></script>
 
 
 
 
-    <script src="node_modules/sinon/pkg/sinon.js"></script>
+  <script src="node_modules/sinon/pkg/sinon.js"></script>
 
-    <!-- Include the student's JavaScript file. -->
-    <script src="index.js"></script>
+  <!-- Include the student's JavaScript file. -->
+  <script src="index.js"></script>
 
-    <!-- Include the JavaScript file containing the tests. -->
-    <script src="test/indexTest.js"></script>
+  <!-- Include the JavaScript file containing the tests. -->
+  <script src="test/indexTest.js"></script>
 
-    <!-- Include Flatiron School's test runner to push results to Learn. -->
-    <script src="node_modules/learn-browser/learnBrowser.min.js"></script>
-  </body>
+  <!-- Include Flatiron School's test runner to push results to Learn. -->
+  <script src="node_modules/learn-browser/learnBrowser.min.js"></script>
+</body>
+
 </html>
